--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,7 @@
         <item name="android:background">@color/colorAccent</item>
         <item name="android:src">@drawable/ball</item>
         <item name="android:adjustViewBounds">true</item>
+        <item name="android:onClick">changePatch</item>
     </style>
 
     <style name="patchColumn" >
