Arrange and include missing culomn

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,7 +68,7 @@
         android:id="@+id/main_linearLayout"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="48dp"
+        android:layout_marginBottom="16dp"
         android:layout_marginEnd="48dp"
         android:layout_marginLeft="48dp"
         android:layout_marginRight="48dp"
@@ -109,6 +109,31 @@
                 style="@style/patchSquareImage"
                 android:tag="I15" />
 
+            <ImageView
+                android:id="@+id/I16"
+                style="@style/patchSquareImage"
+                android:tag="I16" />
+
+            <ImageView
+                android:id="@+id/I17"
+                style="@style/patchSquareImage"
+                android:tag="I17" />
+
+            <ImageView
+                android:id="@+id/I18"
+                style="@style/patchSquareImage"
+                android:tag="I18" />
+
+            <ImageView
+                android:id="@+id/I19"
+                style="@style/patchSquareImage"
+                android:tag="I19" />
+
+            <ImageView
+                android:id="@+id/I20"
+                style="@style/patchSquareImage"
+                android:tag="I20" />
+
         </LinearLayout>
 
         <LinearLayout style="@style/patchColumn">
@@ -137,6 +162,31 @@
                 android:id="@+id/I25"
                 style="@style/patchSquareImage"
                 android:tag="I25" />
+
+            <ImageView
+                android:id="@+id/I26"
+                style="@style/patchSquareImage"
+                android:tag="I26" />
+
+            <ImageView
+                android:id="@+id/I27"
+                style="@style/patchSquareImage"
+                android:tag="I27" />
+
+            <ImageView
+                android:id="@+id/I28"
+                style="@style/patchSquareImage"
+                android:tag="I28" />
+
+            <ImageView
+                android:id="@+id/I29"
+                style="@style/patchSquareImage"
+                android:tag="I29" />
+
+            <ImageView
+                android:id="@+id/I30"
+                style="@style/patchSquareImage"
+                android:tag="I30" />
 
         </LinearLayout>
 
@@ -167,6 +217,31 @@
                 style="@style/patchSquareImage"
                 android:tag="I35" />
 
+            <ImageView
+                android:id="@+id/I36"
+                style="@style/patchSquareImage"
+                android:tag="I36" />
+
+            <ImageView
+                android:id="@+id/I37"
+                style="@style/patchSquareImage"
+                android:tag="I37" />
+
+            <ImageView
+                android:id="@+id/I38"
+                style="@style/patchSquareImage"
+                android:tag="I38" />
+
+            <ImageView
+                android:id="@+id/I39"
+                style="@style/patchSquareImage"
+                android:tag="I39" />
+
+            <ImageView
+                android:id="@+id/I40"
+                style="@style/patchSquareImage"
+                android:tag="I40" />
+
         </LinearLayout>
 
         <LinearLayout style="@style/patchColumn">
@@ -196,6 +271,31 @@
                 style="@style/patchSquareImage"
                 android:tag="I45" />
 
+            <ImageView
+                android:id="@+id/I46"
+                style="@style/patchSquareImage"
+                android:tag="I46" />
+
+            <ImageView
+                android:id="@+id/I47"
+                style="@style/patchSquareImage"
+                android:tag="I47" />
+
+            <ImageView
+                android:id="@+id/I48"
+                style="@style/patchSquareImage"
+                android:tag="I48" />
+
+            <ImageView
+                android:id="@+id/I49"
+                style="@style/patchSquareImage"
+                android:tag="I49" />
+
+            <ImageView
+                android:id="@+id/I50"
+                style="@style/patchSquareImage"
+                android:tag="I50" />
+
         </LinearLayout>
 
         <LinearLayout style="@style/patchColumn">
@@ -224,6 +324,301 @@
                 android:id="@+id/I55"
                 style="@style/patchSquareImage"
                 android:tag="I55" />
+
+            <ImageView
+                android:id="@+id/I56"
+                style="@style/patchSquareImage"
+                android:tag="I56" />
+
+            <ImageView
+                android:id="@+id/I57"
+                style="@style/patchSquareImage"
+                android:tag="I57" />
+
+            <ImageView
+                android:id="@+id/I58"
+                style="@style/patchSquareImage"
+                android:tag="I58" />
+
+            <ImageView
+                android:id="@+id/I59"
+                style="@style/patchSquareImage"
+                android:tag="I59" />
+
+            <ImageView
+                android:id="@+id/I60"
+                style="@style/patchSquareImage"
+                android:tag="I60" />
+
+        </LinearLayout>
+
+        <LinearLayout style="@style/patchColumn">
+
+            <ImageView
+                android:id="@+id/I61"
+                style="@style/patchSquareImage"
+                android:tag="I61" />
+
+            <ImageView
+                android:id="@+id/I62"
+                style="@style/patchSquareImage"
+                android:tag="I62" />
+
+            <ImageView
+                android:id="@+id/I63"
+                style="@style/patchSquareImage"
+                android:tag="I63" />
+
+            <ImageView
+                android:id="@+id/I64"
+                style="@style/patchSquareImage"
+                android:tag="I64" />
+
+            <ImageView
+                android:id="@+id/I65"
+                style="@style/patchSquareImage"
+                android:tag="I65" />
+
+            <ImageView
+                android:id="@+id/I66"
+                style="@style/patchSquareImage"
+                android:tag="I66" />
+
+            <ImageView
+                android:id="@+id/I67"
+                style="@style/patchSquareImage"
+                android:tag="I67" />
+
+            <ImageView
+                android:id="@+id/I68"
+                style="@style/patchSquareImage"
+                android:tag="I68" />
+
+            <ImageView
+                android:id="@+id/I69"
+                style="@style/patchSquareImage"
+                android:tag="I69" />
+
+            <ImageView
+                android:id="@+id/I70"
+                style="@style/patchSquareImage"
+                android:tag="I70" />
+
+        </LinearLayout>
+
+        <LinearLayout style="@style/patchColumn">
+
+            <ImageView
+                android:id="@+id/I71"
+                style="@style/patchSquareImage"
+                android:tag="I71" />
+
+            <ImageView
+                android:id="@+id/I72"
+                style="@style/patchSquareImage"
+                android:tag="I72" />
+
+            <ImageView
+                android:id="@+id/I73"
+                style="@style/patchSquareImage"
+                android:tag="I73" />
+
+            <ImageView
+                android:id="@+id/I74"
+                style="@style/patchSquareImage"
+                android:tag="I74" />
+
+            <ImageView
+                android:id="@+id/I75"
+                style="@style/patchSquareImage"
+                android:tag="I75" />
+
+            <ImageView
+                android:id="@+id/I76"
+                style="@style/patchSquareImage"
+                android:tag="I76" />
+
+            <ImageView
+                android:id="@+id/I77"
+                style="@style/patchSquareImage"
+                android:tag="I77" />
+
+            <ImageView
+                android:id="@+id/I78"
+                style="@style/patchSquareImage"
+                android:tag="I78" />
+
+            <ImageView
+                android:id="@+id/I79"
+                style="@style/patchSquareImage"
+                android:tag="I79" />
+
+            <ImageView
+                android:id="@+id/I80"
+                style="@style/patchSquareImage"
+                android:tag="I80" />
+
+        </LinearLayout>
+
+        <LinearLayout style="@style/patchColumn">
+
+            <ImageView
+                android:id="@+id/I81"
+                style="@style/patchSquareImage"
+                android:tag="I81" />
+
+            <ImageView
+                android:id="@+id/I82"
+                style="@style/patchSquareImage"
+                android:tag="I82" />
+
+            <ImageView
+                android:id="@+id/I83"
+                style="@style/patchSquareImage"
+                android:tag="I83" />
+
+            <ImageView
+                android:id="@+id/I84"
+                style="@style/patchSquareImage"
+                android:tag="I84" />
+
+            <ImageView
+                android:id="@+id/I85"
+                style="@style/patchSquareImage"
+                android:tag="I85" />
+
+            <ImageView
+                android:id="@+id/I86"
+                style="@style/patchSquareImage"
+                android:tag="I86" />
+
+            <ImageView
+                android:id="@+id/I87"
+                style="@style/patchSquareImage"
+                android:tag="I87" />
+
+            <ImageView
+                android:id="@+id/I88"
+                style="@style/patchSquareImage"
+                android:tag="I88" />
+
+            <ImageView
+                android:id="@+id/I89"
+                style="@style/patchSquareImage"
+                android:tag="I89" />
+
+            <ImageView
+                android:id="@+id/I90"
+                style="@style/patchSquareImage"
+                android:tag="I90" />
+
+        </LinearLayout>
+
+        <LinearLayout style="@style/patchColumn">
+
+            <ImageView
+                android:id="@+id/I91"
+                style="@style/patchSquareImage"
+                android:tag="I91" />
+
+            <ImageView
+                android:id="@+id/I92"
+                style="@style/patchSquareImage"
+                android:tag="I92" />
+
+            <ImageView
+                android:id="@+id/I93"
+                style="@style/patchSquareImage"
+                android:tag="I93" />
+
+            <ImageView
+                android:id="@+id/I94"
+                style="@style/patchSquareImage"
+                android:tag="I94" />
+
+            <ImageView
+                android:id="@+id/I95"
+                style="@style/patchSquareImage"
+                android:tag="I95" />
+
+            <ImageView
+                android:id="@+id/I96"
+                style="@style/patchSquareImage"
+                android:tag="I96" />
+
+            <ImageView
+                android:id="@+id/I97"
+                style="@style/patchSquareImage"
+                android:tag="I97" />
+
+            <ImageView
+                android:id="@+id/I98"
+                style="@style/patchSquareImage"
+                android:tag="I98" />
+
+            <ImageView
+                android:id="@+id/I99"
+                style="@style/patchSquareImage"
+                android:tag="I99" />
+
+            <ImageView
+                android:id="@+id/I100"
+                style="@style/patchSquareImage"
+                android:tag="I10" />
+
+        </LinearLayout>
+
+        <LinearLayout style="@style/patchColumn">
+
+            <ImageView
+                android:id="@+id/I101"
+                style="@style/patchSquareImage"
+                android:tag="I101" />
+
+            <ImageView
+                android:id="@+id/I102"
+                style="@style/patchSquareImage"
+                android:tag="I102" />
+
+            <ImageView
+                android:id="@+id/I103"
+                style="@style/patchSquareImage"
+                android:tag="I103" />
+
+            <ImageView
+                android:id="@+id/I104"
+                style="@style/patchSquareImage"
+                android:tag="I104" />
+
+            <ImageView
+                android:id="@+id/I105"
+                style="@style/patchSquareImage"
+                android:tag="I105" />
+
+            <ImageView
+                android:id="@+id/I106"
+                style="@style/patchSquareImage"
+                android:tag="I106" />
+
+            <ImageView
+                android:id="@+id/I107"
+                style="@style/patchSquareImage"
+                android:tag="I107" />
+
+            <ImageView
+                android:id="@+id/I108"
+                style="@style/patchSquareImage"
+                android:tag="I108" />
+
+            <ImageView
+                android:id="@+id/I109"
+                style="@style/patchSquareImage"
+                android:tag="I109" />
+
+            <ImageView
+                android:id="@+id/I110"
+                style="@style/patchSquareImage"
+                android:tag="I110" />
 
         </LinearLayout>
 
